--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,12 @@
   }
 }
 
+html,
+:host {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
 input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
